#462 add java 10 to jdk 9 profile

--- a/pom.xml
+++ b/pom.xml
@@ -428,7 +428,7 @@
         <profile>
             <id>jdk19</id>
             <activation>
-                <jdk>9</jdk>
+                <jdk>[9,10]</jdk>
             </activation>
             <properties>
                 <source.classifier>jdk9-sources</source.classifier>
@@ -604,7 +604,7 @@
                     <name>env.TRAVIS</name>
                     <value>true</value>
                 </property>
-                <jdk>9</jdk>
+                <jdk>[9,10]</jdk>
             </activation>
             <modules>
                 <module>sfm-test-sandbox</module>
