--- a/sfm-jmh/pom.xml
+++ b/sfm-jmh/pom.xml
@@ -166,7 +166,7 @@ questions.
         <profile>
             <id>jdk19</id>
             <activation>
-                <jdk>9</jdk>
+                <jdk>[9,10]</jdk>
             </activation>
             <properties>
                 <jar.classifier>jdk9</jar.classifier>
