--- a/sfm-jdbi/pom.xml
+++ b/sfm-jdbi/pom.xml
@@ -123,7 +123,7 @@
 		<profile>
 			<id>jdk19</id>
 			<activation>
-				<jdk>9</jdk>
+				<jdk>[9,10]</jdk>
 			</activation>
 			<build>
 				<plugins>
