--- a/sfm-util/pom.xml
+++ b/sfm-util/pom.xml
@@ -134,7 +134,7 @@
 		<profile>
 			<id>jdk19</id>
 			<activation>
-				<jdk>9</jdk>
+				<jdk>[9,10]</jdk>
 			</activation>
 			<dependencies>
 				<dependency>
