first attempt at including java10 build

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ addons:
     - mysql-client-5.6
 
 jdk:
+  - oraclejdk10
   - oraclejdk9
   - oraclejdk8
   - openjdk7
@@ -39,12 +40,14 @@ before_install:
   - sudo -E add-apt-repository -y ppa:openjdk-r/ppa
   - sudo -E add-apt-repository -y ppa:webupd8team/java
   - sudo apt-get -y update
-  - echo install jdk6 jdk7
+  - echo install jdk 6 7 9 10
   - sudo apt-get -y install openjdk-6-jdk openjdk-7-jdk oracle-java9-installer
   - sudo ln -s /usr/lib/jvm/java-6-openjdk-amd64 /usr/lib/jvm/java-6-openjdk
   - sudo ln -s /usr/lib/jvm/java-7-openjdk-amd64 /usr/lib/jvm/java-7-openjdk
   - sudo ln -s /usr/lib/jvm/java-8-oracle /usr/lib/jvm/java-8-oracle-amd64
+  - . ./.travis/install-jdk-10.sh
   - ls -al /usr/lib/jvm/
+  
 before_script:
   - mysql --verbose -u root -e 'create database sfm;'
   - mysql --verbose -u root -e "CREATE USER 'sfm'@'localhost';"
