--- a/.travis.yml
+++ b/.travis.yml
@@ -15,18 +15,18 @@ addons:
 
 matrix:
   include:
-    - jdk: oraclejdk8
-      script:  mvn test javadoc:javadoc -B && mvn -P travis,!dev -DserviceName=travis-ci jacoco:report coveralls:report
     - jdk: oraclejdk9
       install: . ./.travis/install-jdk-9.sh
-      script:  mvn test -B
+      script:  mvn package -B
+    - jdk: oraclejdk8
+      script:  mvn test javadoc:javadoc -B && mvn -P travis,!dev -DserviceName=travis-ci jacoco:report coveralls:report
     - jdk: openjdk7
       script:  mvn test javadoc:javadoc -B    
       install: . ./.travis/install-jdk-7.sh
     - jdk: openjdk6
       script:  mvn test javadoc:javadoc -B
       install: . ./.travis/install-jdk-6.sh
-    - script:  mvn test -B
+    - script:  mvn package -B
       install: . ./.travis/install-jdk-10.sh
     
 
