--- a/sfm-reflect/pom.xml
+++ b/sfm-reflect/pom.xml
@@ -309,6 +309,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.21.0-SNAPSHOT</version>
 
 						<configuration>
 							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
