--- a/sfm-test-osgi/pom.xml
+++ b/sfm-test-osgi/pom.xml
@@ -98,6 +98,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.21.0-SNAPSHOT</version>
 
 						<configuration>
 							<argLine>--add-opens java.base/java.net=ALL-UNNAMED</argLine>
