--- a/sfm-tuples/pom.xml
+++ b/sfm-tuples/pom.xml
@@ -163,7 +163,15 @@
 						</executions>
 					</plugin>
 				</plugins>
-
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.surefire</groupId>
+							<artifactId>maven-surefire-plugin</artifactId>
+							<version>2.21.0-SNAPSHOT</version>
+						</plugin>
+					</plugins>
+				</pluginManagement>
 			</build>
 		</profile>
 	</profiles>
