--- a/sfm-test-osgi/pom.xml
+++ b/sfm-test-osgi/pom.xml
@@ -110,4 +110,17 @@
 		</profile>
 
 	</profiles>
+
+	<repositories>
+		<repository>
+			<id>arnaudroger-maven-repository</id>
+			<url>https://arnaudroger.github.io/maven</url>
+		</repository>
+	</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>arnaudroger-maven-plugin-repository</id>
+			<url>https://arnaudroger.github.io/maven</url>
+		</pluginRepository>
+	</pluginRepositories>
 </project>
