--- a/sfm-csv/pom.xml
+++ b/sfm-csv/pom.xml
@@ -254,8 +254,14 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.21.0-SNAPSHOT</version>
-
+						<version>2.20.1</version>
+						<dependencies>
+							<dependency>
+								<groupId>org.apache.maven.surefire</groupId>
+								<artifactId>maven-surefire-common</artifactId>
+								<version>2.20.1-pj10</version>
+							</dependency>
+						</dependencies>
 						<configuration>
 							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
 						</configuration>
