--- a/sfm-datastax/pom.xml
+++ b/sfm-datastax/pom.xml
@@ -252,7 +252,14 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.21.0-SNAPSHOT</version>
+						<version>2.20.1</version>
+						<dependencies>
+							<dependency>
+								<groupId>org.apache.maven.surefire</groupId>
+								<artifactId>maven-surefire-common</artifactId>
+								<version>2.20.1-pj10</version>
+							</dependency>
+						</dependencies>
 
 						<configuration>
 							<argLine>--add-opens java.base/java.util.concurrent=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED</argLine>
