--- a/sfm-tuples/pom.xml
+++ b/sfm-tuples/pom.xml
@@ -165,7 +165,14 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.21.0-SNAPSHOT</version>
+						<version>2.20.1</version>
+						<dependencies>
+							<dependency>
+								<groupId>org.apache.maven.surefire</groupId>
+								<artifactId>maven-surefire-common</artifactId>
+								<version>2.20.1-pj10</version>
+							</dependency>
+						</dependencies>
 					</plugin>
 				</plugins>
 			</build>
