--- a/sfm-querydsl/pom.xml
+++ b/sfm-querydsl/pom.xml
@@ -114,5 +114,54 @@
 				</plugins>
 			</build>
 		</profile>
+		<profile>
+			<id>jdk19</id>
+			<activation>
+				<jdk>[9,10]</jdk>
+			</activation>
+
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+
+						<executions>
+							<execution>
+								<id>default-testCompile</id>
+								<phase>test-compile</phase>
+								<configuration>
+									<fork>true</fork>
+									<compilerArgs>
+										<arg>--add-exports</arg>
+										<arg>org.simpleflatmapper.converter.protobuf/org.simpleflatmapper.converter.protobuf.impl=org.simpleflatmapper.converter.protobuf.test</arg>
+										<arg>--add-exports</arg>
+										<arg>org.simpleflatmapper.converter.protobuf/org.simpleflatmapper.converter.protobuf=org.simpleflatmapper.converter.protobuf.test</arg>
+									</compilerArgs>
+								</configuration>
+								<goals>
+									<goal>testCompile</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.20.1</version>
+						<dependencies>
+							<dependency>
+								<groupId>org.apache.maven.surefire</groupId>
+								<artifactId>maven-surefire-common</artifactId>
+								<version>2.20.1-pj10</version>
+							</dependency>
+						</dependencies>
+					</plugin>
+
+				</plugins>
+
+			</build>
+
+		</profile>
 	</profiles>
 </project>
