--- a/sfm-sql2o/pom.xml
+++ b/sfm-sql2o/pom.xml
@@ -124,5 +124,29 @@
 				</plugins>
 			</build>
 		</profile>
+		<profile>
+			<id>jdk19</id>
+			<activation>
+				<jdk>[9,10]</jdk>
+			</activation>
+
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.20.1</version>
+						<dependencies>
+							<dependency>
+								<groupId>org.apache.maven.surefire</groupId>
+								<artifactId>maven-surefire-common</artifactId>
+								<version>2.20.1-pj10</version>
+							</dependency>
+						</dependencies>
+					</plugin>
+
+				</plugins>
+			</build>
+		</profile>
 	</profiles>
 </project>
