#424 add property to enable key value mapping

--- a/sfm-reflect/pom.xml
+++ b/sfm-reflect/pom.xml
@@ -75,6 +75,7 @@
 							org.simpleflatmapper.reflect.getter,
 							org.simpleflatmapper.reflect.setter,
 							org.simpleflatmapper.reflect.primitive,
+							org.simpleflatmapper.reflect.property,
 							org.simpleflatmapper.ow2asm,
 							org.simpleflatmapper.ow2asm.signature
 						</Export-Package>
