[maven-release-plugin] prepare for next development iteration

--- a/sfm-test-osgi/pom.xml
+++ b/sfm-test-osgi/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>sfm-test-osgi</artifactId>
 	<packaging>jar</packaging>
 
-	<version>3.15.2</version>
+	<version>3.15.3-SNAPSHOT</version>
 
 	<licenses>
 		<license>
@@ -36,20 +36,20 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-csv</artifactId>
-			<version>3.15.2</version>
+			<version>3.15.3-SNAPSHOT</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-jdbc</artifactId>
-			<version>3.15.2</version>
+			<version>3.15.3-SNAPSHOT</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-poi</artifactId>
-			<version>3.15.2</version>
+			<version>3.15.3-SNAPSHOT</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
