--- a/sfm-reflect/pom.xml
+++ b/sfm-reflect/pom.xml
@@ -323,6 +323,21 @@
 							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
 						</configuration>
 					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						
+						<configuration>
+							<failOnError>false</failOnError>
+							<additionalDependencies>
+								<additionalDependency>
+									<groupId>org.simpleflatmapper</groupId>
+									<artifactId>ow2asm</artifactId>
+									<version>6.0_ALPHA</version>
+								</additionalDependency>
+							</additionalDependencies>	
+						</configuration>
+					</plugin>
 				</plugins>
 
 			</build>
