--- a/sfm-test/pom.xml
+++ b/sfm-test/pom.xml
@@ -22,6 +22,7 @@
 
 	<properties>
 		<skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
+		<maven.javadoc.skip>true</maven.javadoc.skip>
 	</properties>
 
 	<licenses>
