--- a/pom.xml
+++ b/pom.xml
@@ -598,6 +598,7 @@
                 <module>sfm-test-sandbox</module>
                 <module>sfm-test-osgi</module>
                 <module>sfm-test-lombok</module>
+                <module>sfm-test-kotlin</module>
                 <module>sfm-test-immutables</module>
                 <module>sfm-test-proto</module>
                 <module>sfm-jmh</module>
