--- a/sfm-test-kotlin/pom.xml
+++ b/sfm-test-kotlin/pom.xml
@@ -18,6 +18,8 @@
 	<properties>
 		<jar.classifier />
 	    <kotlin.version>1.2.21</kotlin.version>
+		<junit.version>4.12</junit.version>
+
 	</properties>
 
 	<build>
@@ -42,6 +44,8 @@
             </executions>
         </plugin>
 
+			
+
 		</plugins>
 	</build>
 
@@ -65,9 +69,10 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-stdlib</artifactId>
