--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ matrix:
       install: . ./.travis/install-jdk-9.sh
       script:  mvn package -B
     - jdk: oraclejdk8
-      script:  mvn test javadoc:javadoc -B && mvn -P travis,!dev -DserviceName=travis-ci jacoco:report coveralls:report
+      script:  mvn test javadoc:javadoc -B -Pdev && mvn -P travis,!dev -DserviceName=travis-ci jacoco:report coveralls:report
     - jdk: openjdk7
       script:  mvn test javadoc:javadoc -B    
       install: . ./.travis/install-jdk-7.sh
