--- a/sfm-datastax/pom.xml
+++ b/sfm-datastax/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent</artifactId>
-		<version>3.15.4</version>
+		<version>3.15.5-SNAPSHOT</version>
 	</parent>
 
 	<description>Cassandra Datastax SFM supports.</description>
@@ -64,13 +64,13 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-map</artifactId>
-			<version>3.15.4</version>
+			<version>3.15.5-SNAPSHOT</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-tuples</artifactId>
-			<version>3.15.4</version>
+			<version>3.15.5-SNAPSHOT</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 
@@ -84,7 +84,7 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-map</artifactId>
-			<version>3.15.4</version>
+			<version>3.15.5-SNAPSHOT</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
@@ -92,14 +92,14 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
-			<version>3.15.4</version>
+			<version>3.15.5-SNAPSHOT</version>
 			<scope>test</scope>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-converter-joda-time</artifactId>
-			<version>3.15.4</version>
+			<version>3.15.5-SNAPSHOT</version>
 			<scope>test</scope>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
