--- a/sfm-reflect/pom.xml
+++ b/sfm-reflect/pom.xml
@@ -119,7 +119,9 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
+				<version>3.0.2</version>
 				<executions>
 					<execution>
 						<id>copy-asm</id>
@@ -286,7 +288,9 @@
                         </executions>
                     </plugin>
 					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-dependency-plugin</artifactId>
+						<version>3.0.2</version>
 						<executions>
 							<execution>
 								<id>copy-asm</id>
