--- a/pom.xml
+++ b/pom.xml
@@ -678,7 +678,7 @@
     <pluginRepositories>
         <pluginRepository>
             <id>arnaudroger-maven-plugin-repository</id>
-            <url>https://arnaudroger.github.io/maven</url>
+            <url>http://arnaudroger.github.io/maven</url>
         </pluginRepository>
     </pluginRepositories>
     <distributionManagement>
