--- a/sfm-test-kotlin/pom.xml
+++ b/sfm-test-kotlin/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>sfm-test-kotlin</artifactId>
 	<packaging>jar</packaging>
 
-	<version>3.15.7</version>
+	<version>3.15.8-SNAPSHOT</version>
 
 	<licenses>
 		<license>
@@ -53,7 +53,7 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-csv</artifactId>
-			<version>3.15.7</version>
+			<version>3.15.8-SNAPSHOT</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		    <dependency>
