--- a/sfm-sql2o/pom.xml
+++ b/sfm-sql2o/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent</artifactId>
-		<version>3.15.8</version>
+		<version>3.15.9-SNAPSHOT</version>
 	</parent>
 
 	<description>Sql2o supports.</description>
@@ -51,13 +51,13 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-jdbc</artifactId>
-			<version>3.15.8</version>
+			<version>3.15.9-SNAPSHOT</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
-			<version>3.15.8</version>
+			<version>3.15.9-SNAPSHOT</version>
 			<classifier>${jar.classifier}</classifier>
 			<scope>test</scope>
 		</dependency>
