--- a/sfm-jdbi3/pom.xml
+++ b/sfm-jdbi3/pom.xml
@@ -46,8 +46,8 @@
 
 		<dependency>
 			<groupId>org.jdbi</groupId>
-			<artifactId>jdbi3</artifactId>
-			<version>3.0.0-beta2</version>
+			<artifactId>jdbi3-core</artifactId>
+			<version>3.1.0</version>
 			<exclusions>
 				<exclusion>
 					<groupId>com.google.code.findbugs</groupId>
