--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ matrix:
       install: . ./.travis/install-jdk-6.sh
     - script:  mvn package -B -Pjdk19
       install: . ./.travis/install-jdk-10.sh
-    - script:  mvn package -B -Pjdk19
+    - script:  mvn package -B -Pjdk19 -DskipTests
       install: . ./.travis/install-jdk-11.sh
     
 
