--- a/ow2.asm/ASM_6_2/pom.xml
+++ b/ow2.asm/ASM_6_2/pom.xml
@@ -1,19 +1,30 @@
-
 <project>
   <modelVersion>4.0.0</modelVersion>
 
 
   <groupId>org.simpleflatmapper</groupId>
-  <name>ASM Core</name>
+  <name>Repackaged OW2 ASM Core</name>
   <version>6.2</version>
-  <artifactId>ow2asm</artifactId>
+  <artifactId>ow2-asm</artifactId>
   <packaging>jar</packaging>
+
+  <parent>
+    <groupId>org.simpleflatmapper</groupId>
+    <artifactId>sfm-parent</artifactId>
+    <version>3.18.1</version>
+  </parent>
+
+  <licenses>
+    <license>
+      <name>BSD License</name>
+      <url>https://asm.ow2.io/license.html</url>
+    </license>
+  </licenses>
   <properties>
-    <maven.deploy.skip>true</maven.deploy.skip>
     <maven.source.skip>true</maven.source.skip>
     <maven.javadoc.skip>true</maven.javadoc.skip>
   </properties>
-  
+
   <dependencies>
     <dependency>
       <groupId>org.ow2.asm</groupId>
@@ -25,15 +36,36 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.6.0</version>
+        <artifactId>maven-jar-plugin</artifactId>
         <configuration>
-          <source>8</source>
-          <target>8</target>
+          <useDefaultManifestFile>true</useDefaultManifestFile>
         </configuration>
       </plugin>
-
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <extensions>true</extensions>
+        <version>2.5.4</version>
+        <executions>
+          <execution>
+            <id>bundle-manifest</id>
+            <phase>process-classes</phase>
+            <goals>
+              <goal>manifest</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <instructions>
+            <Export-Package>org.simpleflatmapper.ow2asm,org.simpleflatmapper.ow2asm.signature</Export-Package>
+          </instructions>
+          <archive>
+            <manifestEntries>
+              <Automatic-Module-Name>org.simpleflatmapper.ow2asm</Automatic-Module-Name>
+            </manifestEntries>
+          </archive>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
@@ -60,11 +92,4 @@
 
   </build>
 
-  
-  <pluginRepositories>
-    <pluginRepository>
-      <id>arnaudroger-maven-plugin-repository</id>
-      <url>https://arnaudroger.github.io/maven</url>
-    </pluginRepository>
-  </pluginRepositories>
 </project>
