--- a/sfm-reflect/pom.xml
+++ b/sfm-reflect/pom.xml
@@ -60,6 +60,13 @@
 			<classifier>${jar.classifier}</classifier>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.eclipse.collections</groupId>
+			<artifactId>eclipse-collections</artifactId>
+			<version>9.2.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
