--- a/sfm-test-sandbox/pom.xml
+++ b/sfm-test-sandbox/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>sfm-test-sandbox</artifactId>
 	<packaging>jar</packaging>
 
-	<version>4.0.0-SNAPSHOT</version>
+	<version>4.0.1</version>
 
 	<licenses>
 		<license>
@@ -33,13 +33,13 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-csv</artifactId>
-			<version>4.0.0-SNAPSHOT</version>
+			<version>4.0.1</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-jdbc</artifactId>
-			<version>4.0.0-SNAPSHOT</version>
+			<version>4.0.1</version>
 		</dependency>
 
 		<dependency>
