#559 add array to list converter

--- a/sfm-jooq/pom.xml
+++ b/sfm-jooq/pom.xml
@@ -48,7 +48,8 @@
 		<dependency>
 			<groupId>org.jooq</groupId>
 			<artifactId>jooq</artifactId>
-			<version>3.9.5</version>
+			<!--<version>3.9.5</version>-->
+			<version>3.11.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
